exports[`mcfunction argument parser > minecraft:item_enchantment > Parse 'silk_touch' 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 10
    },
    "path": [
      "silk_touch"
    ]
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:item_enchantment > Parse 'unbreaking' 1`] = `
{
  "node": {
    "type": "resource_location",
    "range": {
      "start": 0,
      "end": 10
    },
    "path": [
      "unbreaking"
    ]
  },
  "errors": []
}
`;
